AMBARI-25433. Ambari should add login and password to urls populated from VDF (aonishuk)